fix colour contrast after Lighthouse audit

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -231,7 +231,7 @@ h1, h2, h3, h4, h5, h6, .logo {
 }
 
 .card-body .date-time {
-    color: #797878;
+    color: #4A4A4A;
     font-size: 0.8rem;
     margin-top: 0.5rem;
 }
